tests/paczka1/small_fuzzy/27085238.err
Error in line 3: HotZ4 S602 73,4
Error in line 5: S602 S370 52,4
Error in line 13: S602 S602 54,2
